refactor: :bug: Integrate validators, refactor and improve the code