@@ -5,7 +5,7 @@ import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.DisplayName;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class ControlStructureValidatorTest {
@@ -15,15 +15,15 @@ public class ControlStructureValidatorTest {
     @Test
     @DisplayName("Debe retornar true al detectar estructuras de control como if, else if, while, for")
     void testValidControlStructures() {
-        List<String> linesIf = Arrays.asList("if (x > 10) { ");
-        List<String> incompleteLinesIf = Arrays.asList("if (x > 10) { ");
+        List<String> linesIf = new ArrayList<>(List.of("if (x > 10) { "));
+        List<String> incompleteLinesIf = new ArrayList<>(List.of("if (x > 10) { "));
 
-        List<String> linesElseIf = Arrays.asList("} else if (x == 1) {");
+        List<String> linesElseIf = new ArrayList<>(List.of("} else if (x == 1) {"));
 
-        List<String> linesWhile = Arrays.asList("while (x > 10) {");
-        List<String> linesDoWhile = Arrays.asList("} while (x > 10);");
-        List<String> linesFor = Arrays.asList("for (int i = 0; i < 10; i++) { ");
-        List<String> linesForEach = Arrays.asList("for (int x : arr) { ");
+        List<String> linesWhile = new ArrayList<>(List.of("while (x > 10) {"));
+        List<String> linesDoWhile = new ArrayList<>(List.of("} while (x > 10);"));
+        List<String> linesFor = new ArrayList<>(List.of("for (int i = 0; i < 10; i++) { "));
+        List<String> linesForEach = new ArrayList<>(List.of("for (int x : arr) { "));
 
         assertTrue(validator.isValid(linesIf));
         assertTrue(validator.isValid(incompleteLinesIf));
@@ -36,7 +36,7 @@ public class ControlStructureValidatorTest {
     @Test
     @DisplayName("Debe retornar true al detectar estructuras de control como if, else if, while, for con saltos de línea")
     void testValidControlStructuresWithWrapped() {
-        List<String> linesOfCode = Arrays.asList("if (x > 10 || x > 30", "|| x > 100) {");
+        List<String> linesOfCode = new ArrayList<>(List.of("if (x > 10 || x > 30", "|| x > 100) {"));
 
         assertTrue(validator.isValid(linesOfCode));
         
@@ -45,12 +45,12 @@ public class ControlStructureValidatorTest {
     @Test
     @DisplayName("Debe retornar false al no detectar estructuras de control válidas como if, else if, while, for, for-each")
     void testInvalidControlStructures() {
-        List<String> linesIf = Arrays.asList("if (x > 10");
-        List<String> linesElseIf = Arrays.asList("else if (x == 1");
-        List<String> linesWhile = Arrays.asList("while x > 10");
-        List<String> linesDoWhile = Arrays.asList("} while x > 10");
-        List<String> linesFor = Arrays.asList("for (int i = 0; i < 10; i++");
-        List<String> linesForEach = Arrays.asList("for (x : arr");
+        List<String> linesIf = new ArrayList<>(List.of("if (x > 10"));
+        List<String> linesElseIf = new ArrayList<>(List.of("else if (x == 1"));
+        List<String> linesWhile = new ArrayList<>(List.of("while x > 10"));
+        List<String> linesDoWhile = new ArrayList<>(List.of("} while x > 10"));
+        List<String> linesFor = new ArrayList<>(List.of("for (int i = 0; i < 10; i++"));
+        List<String> linesForEach = new ArrayList<>(List.of("for (x : arr"));
 
         assertFalse(validator.isValid(linesIf));
         assertFalse(validator.isValid(linesElseIf));
@@ -65,7 +65,7 @@ public class ControlStructureValidatorTest {
     @Test
     @DisplayName("Debe retornar false al detectar una sentencia switch")
     void testSwitchStatement() {
-        List<String> linesSwitch = Arrays.asList("switch (x) {");
+        List<String> linesSwitch = new ArrayList<>(List.of("switch (x) {"));
         assertFalse(validator.isValid(linesSwitch));
     }
 
